--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <h1 class="text-white mt-3">Telegram Dating Free</h1>
       <p class="text-white">Sexy and Beauty Girls Exposed for You</p>
-      <a href="https://lorddeni.ngelit.com"><button type="button" class="btn btn-danger rounded-pill" style="width: 10rem;">Click To Watch</button></a>
+      <a href="https://nozdambo.ngelit.com"><button type="button" class="btn btn-danger rounded-pill" style="width: 10rem;">Click To Watch</button></a>
     </div>
   </header>
 
